# cluxion-skill-plugin-agent

./: README.md  design-sources.lock.json
plugins/clx-grok-call/: DESIGN.md  README.md  pyproject.toml
plugins/clx-grok-call/.claude-plugin/: marketplace.json  plugin.json
plugins/clx-grok-call/.codex-plugin/: plugin.json
plugins/clx-grok-call/skills/clx-grok-call/: SKILL.md
plugins/clx-grok-call/skills/clx-grok-call/agents/: openai.yaml
plugins/clx-grok-call/src/: clx_grok_call.py
plugins/clx-grok-call/tests/: test_clx_grok_call.py
skills/clx-algorithmic-art/: SKILL.md
skills/clx-algorithmic-art/agents/: openai.yaml
skills/clx-anti-hallucination/: SKILL.md
skills/clx-apple-design/: SKILL.md
skills/clx-apple-design/agents/: openai.yaml
skills/clx-bracket-payload/: SKILL.md
skills/clx-canvas-design/: SKILL.md
skills/clx-claude-config/: SKILL.md
skills/clx-codex-config/: SKILL.md
skills/clx-color-expert/: SKILL.md
skills/clx-concise-report/: SKILL.md
skills/clx-dataset-work/: SKILL.md
skills/clx-figma-workflow/: SKILL.md
skills/clx-frontend-design/: SKILL.md
skills/clx-grill-me/: README.md  SKILL.md
skills/clx-hand-drawn-diagrams/: SKILL.md
skills/clx-immersive-web/: SKILL.md
skills/clx-modular-architecture-design/: SKILL.md
skills/clx-playwright/: SKILL.md
skills/clx-report-policy/: SKILL.md
skills/clx-session-intent/: SKILL.md
skills/clx-theme-factory/: SKILL.md
skills/clx-unslop/: SKILL.md
skills/clx-vercel-web-design-guidelines/: SKILL.md
tests/: design-routing-fixtures.jsonl  test_design_assets.py
(+34 files in other folders)
