[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clx-grok-call"
version = "0.1.2"
description = "One bounded Grok CLI call for Codex, Claude Code, and terminals"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "cluxion" }]
keywords = ["grok", "cli", "xai", "oneshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cluxion/clx-grok-call"
Repository = "https://github.com/cluxion/clx-grok-call.git"
Issues = "https://github.com/cluxion/clx-grok-call/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
clx-grok-call = "clx_grok_call:cli"
grok-call = "clx_grok_call:cli"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["clx_grok_call"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
